changed example (to be continued)

--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -266,7 +266,7 @@ Be aware that some cases (Fig.~\ref{divaprob}) are to be avoided, since problems
 \begin{figure}[H]
 \centering
 \parbox{.5\textwidth}{
-\includegraphics[width=.45\textwidth]{divaproblems}
+\includegraphics[width=.45\textwidth,bb=0 0 488 254]{divaproblems}
 }\parbox{.5\textwidth}{\caption[Example of improper contours.]{Example of improper contours. Left: crossing of two segments of a same contour; up: crossing of two different contours; right: first and last points of the contour generate a segment that crosses the other parts; down: two contours having a common segment.\label{divaprob}}
 }
 \end{figure}
