--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -1,4 +1,4 @@
-\chapter{\diva general theory\label{chaptheory}}
+\chapter[General theory]{\diva general theory\label{chaptheory}}
 %TEST
 
 This chapter describes the theory behind the \diva interpolation method and compares it with the Optimal Interpolation. 
@@ -222,7 +222,7 @@ The quality of OI (and other gridding techniques) relies on the correct specific
 
 Finally, although OI provides the best analysis in the sense that it gives the minimum expected error, the method has the drawback of not being fully objective: the covariance of the unknown field, and the standard deviation of observational errors generally have to be chosen subjectively by he user.
 
-\section[The Variational Inverse Method]{The Variational Inverse Method and its implementation}
+\section[Variational Inverse Method]{The Variational Inverse Method and its implementation}
 % ---------------------------------------
 
 \index{VIM}
